# mtre4100

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: FindOctave.cmake  OctaveBuild.cmake
finalReport/: CMakeLists.txt  main.tex
finalReport/sty/: finalReportCmds.sty  finalReportStyle.sty
finalReport/tex/: applications.tex  conclusion.tex  finalReport.bib  intro.tex  sbmpc.tex
formula/: CMakeLists.txt  main.tex
formula/sty/: formulaFormat.sty
formula/tex/: formula.tex
lab1/: CMakeLists.txt  Lab1Part1.tex  main.tex
lab1/data/: 2016-08-25_lab1-15hz_1st.csv  2016-08-25_lab1-30hz_1st.csv  2016-08-25_lab1-30hz_2nd.csv  foResults.tex
lab1/scripts/: analyze.m
lab1/tex/: Lab1Part1.tex  conclusion.tex  firstOrder.tex  secondOrder.tex
lab2/: CMakeLists.txt  experimentalWork.tex  labformat.sty  main.out  main.tex  mathematicalAnalysis.tex  mtre4100.sty  notation.sty
lab2/data/: lab2_pt1_filter.csv  lab2_pt1_src.csv  lab2_pt2_n1.csv  lab2_pt2_n2.csv  lab2_pt2_n3.csv  lab2_pt2_n4.csv
lab2/scripts/: analyze.m
lab2/tex/: conclusion.tex  experimentalWork.tex  mathematicalAnalysis.tex  part1.tex  part2.tex
lab3/: CMakeLists.txt  labDescription.tex  main.tex
lab3/scripts/: analyze2.m  analyze3.m  analyze4.m  plotData.m
lab3/tex/: conclusion.tex  intro.tex  part2.tex  part3.tex
labviewProj/: CMakeLists.txt  main.tex
labviewProj/img/: labviewFinal.html
labviewProj/tex/: conclusion.tex  intro.tex  part1.tex  part2.tex
util/: CMakeLists.txt  main.tex
util/sty/: fluidsReport.sty  labformat.sty  notation.sty
(+26 files in other folders)
